Update post n comment
Add Send message messenger

--- a/scc-mvc/src/main/resources/static/css/scc-post.css
+++ b/scc-mvc/src/main/resources/static/css/scc-post.css
@@ -152,7 +152,8 @@ overflow: scroll;
 
 .cmtList .cmt{
   cursor:pointer;
-  height: 14vh;
+  max-heightheight: 20vh;
+  overflow: hidden;
   border-bottom: 1px solid lightgray;
   margin-bottom: 0px;
   margin-top: 0px;
