--- a/scc-mvc/src/main/resources/templates/SideBar.html
+++ b/scc-mvc/src/main/resources/templates/SideBar.html
@@ -40,7 +40,17 @@
                             <i class="fa fa-angle-left pull-right"></i>
                     </span>
                 </a>
+            <li class="treeview">
+                <a href="/messenger">
+                    <i class="fa fa-ambulance"></i>
+                    <span>Messenger</span>
+                    <span class="pull-right-container">
+                            <i class="fa fa-angle-left pull-right"></i>
+                    </span>
+                </a>
             </li>
+
+
             <!--Manage Ticket-->
             <li class="treeview">
                 <a href="/manageticket">
